--- a/index.html
+++ b/index.html
@@ -7,6 +7,65 @@
   <title>Gwynne's Goodies</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
+  <style>
+    /* Modern playful style updates */
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #fff8f0;
+      color: #42210b;
+    }
+
+    .gradient-background {
+      background: linear-gradient(135deg, #ffecdf, #ffe4d6);
+    }
+
+    h1, h2, h3 {
+      font-family: 'Fredoka One', cursive;
+      color: #a63c00;
+    }
+
+    .btn-light {
+      background-color: #ffd6a5;
+      color: #42210b;
+      font-weight: bold;
+      border-radius: 12px;
+    }
+
+    .btn-outline-light {
+      border-color: #42210b;
+      color: #42210b;
+      font-weight: bold;
+      border-radius: 12px;
+    }
+
+    .btn-light:hover, .btn-outline-light:hover {
+      opacity: 0.85;
+      transition: 0.3s;
+    }
+
+    .icon-square {
+      font-size: 2rem;
+    }
+
+    .img-fluid {
+      border-radius: 12px;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.15);
+    }
+
+    footer {
+      background-color: #ffe4d6;
+      color: #42210b;
+    }
+
+    footer a {
+      color: #42210b;
+      text-decoration: none;
+    }
+
+    footer a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 
 <body>
@@ -30,21 +89,18 @@
   </nav>
 
   <!-- Hero / Title Section -->
-  <section id="title" class="gradient-background py-5">
+  <section id="title" class="gradient-background py-5 text-center">
     <div class="container col-xxl-8 px-4 pt-5">
       <div class="row flex-lg-row-reverse align-items-center g-5 pt-5">
-        <div class="col-10 col-sm-8 col-lg-6">
-          <img src="./PBPie2.jpg" class="d-block mx-lg-auto img-fluid" alt="Pie" height="200" loading="lazy">
+        <div class="col-10 col-sm-8 col-lg-6 mx-auto">
+          <img src="./PBPie2.jpg" class="d-block mx-auto img-fluid" alt="Pie" loading="lazy">
         </div>
-        <div class="col-lg-6">
-          <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Gwynne's Goodies</h1>
+        <div class="col-lg-6 text-center text-lg-start">
+          <h1 class="display-4 fw-bold lh-1 mb-3">Gwynne's Goodies</h1>
+          <p class="lead mb-4">Baked with love, shared with joy.</p>
           <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-            <a href="/recipes/" class="btn btn-light btn-lg px-4 me-md-2">
-              🍪 Recipes
-            </a>
-            <a href="/about/" class="btn btn-outline-light btn-lg px-4">
-              ℹ️ About
-            </a>
+            <a href="/recipes/" class="btn btn-light btn-lg px-4 me-md-2">🍪 Recipes</a>
+            <a href="/about/" class="btn btn-outline-light btn-lg px-4">ℹ️ About</a>
           </div>
         </div>
       </div>
@@ -52,55 +108,43 @@
   </section>
 
   <!-- Features / Menu Section -->
-  <section id="features" class="py-5">
+  <section id="features" class="py-5 text-center">
     <div class="container mt-5">
-      <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
-        <div class="col d-flex align-items-start">
-          <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-            🥯
-          </div>
-          <div>
-            <h3 class="fs-2">Tried & true recipes</h3>
-            <p>Detailed instruction to make every bite perfect.</p>
-          </div>
+      <div class="row g-4 py-5 row-cols-1 row-cols-md-3">
+        <div class="col d-flex flex-column align-items-center">
+          <div class="icon-square mb-3">🥯</div>
+          <h3 class="fs-3 mb-2">Tried & true recipes</h3>
+          <p>Detailed instructions to make every bite perfect.</p>
         </div>
-        <div class="col d-flex align-items-start">
-          <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-            🎂
-          </div>
-          <div>
-            <h3 class="fs-2">Sweets for any occasion</h3>
-            <p>Birthdays, holidays, celebrations — there’s something for everyone.</p>
-          </div>
+        <div class="col d-flex flex-column align-items-center">
+          <div class="icon-square mb-3">🎂</div>
+          <h3 class="fs-3 mb-2">Sweets for any occasion</h3>
+          <p>Birthdays, holidays, celebrations — there’s something for everyone.</p>
         </div>
-        <div class="col d-flex align-items-start">
-          <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-            🍪
-          </div>
-          <div>
-            <h3 class="fs-2">Variety of choices</h3>
-            <p>Cakes, pies, cookies — all homemade with love.</p>
-          </div>
+        <div class="col d-flex flex-column align-items-center">
+          <div class="icon-square mb-3">🍪</div>
+          <h3 class="fs-3 mb-2">Variety of choices</h3>
+          <p>Cakes, pies, cookies — all homemade with love.</p>
         </div>
       </div>
     </div>
   </section>
 
   <!-- Gallery / Testimonials -->
-  <section id="testimonial" class="py-5">
+  <section id="testimonial" class="py-5 text-center">
     <div class="container">
-      <div class="row g-4 text-center">
+      <div class="row g-4 justify-content-center">
         <div class="col-lg-3 col-sm-6">
-          <img src="./BananaMuffins.jpg" alt="Banana Muffins" class="img-fluid rounded-4">
+          <img src="./BananaMuffins.jpg" alt="Banana Muffins" class="img-fluid">
         </div>
         <div class="col-lg-3 col-sm-6">
-          <img src="./CowboyCookie.jpg" alt="Cowboy Cookie" class="img-fluid rounded-4">
+          <img src="./CowboyCookie.jpg" alt="Cowboy Cookie" class="img-fluid">
         </div>
         <div class="col-lg-3 col-sm-6">
-          <img src="./Lemon.jpg" alt="Lemon Squares" class="img-fluid rounded-4">
+          <img src="./Lemon.jpg" alt="Lemon Squares" class="img-fluid">
         </div>
         <div class="col-lg-3 col-sm-6">
-          <img src="./TwixCheesecake.jpg" alt="Twix Cheesecake" class="img-fluid rounded-4">
+          <img src="./TwixCheesecake.jpg" alt="Twix Cheesecake" class="img-fluid">
         </div>
       </div>
     </div>
@@ -121,4 +165,5 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
