--- a/index.html
+++ b/index.html
@@ -1,145 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gwynne's Goodies</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="./style.css">
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #fff8f0;
-      color: #42210b;
-    }
-    h1, h2, h3 {
-      font-family: 'Fredoka One', cursive;
-      color: #a63c00;
-    }
-    .btn-light {
-      background-color: #ffd6a5;
-      color: #42210b;
-      font-weight: bold;
-      border-radius: 12px;
-    }
-    .btn-outline-light {
-      border-color: #42210b;
-      color: #42210b;
-      font-weight: bold;
-      border-radius: 12px;
-    }
-    .btn-light:hover, .btn-outline-light:hover {
-      opacity: 0.85;
-      transition: 0.3s;
-    }
-    .img-fluid {
-      border-radius: 12px;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.15);
-    }
-    footer {
-      background-color: #ffe4d6;
-      color: #42210b;
-    }
-    footer a {
-      color: #42210b;
-      text-decoration: none;
-    }
-    footer a:hover {
-      text-decoration: underline;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg sticky-top navbar-light bg-light shadow-sm">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm sticky-top">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="/">Gwynne's Goodies</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <a class="navbar-brand fw-bold text-danger" href="/">Gwynne's Goodies</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
+              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="/recipes/">Recipes</a></li>
-          <li class="nav-item"><a class="nav-link" href="/about/">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+          <li class="nav-item"><a class="nav-link text-dark" href="/">Home</a></li>
+          <li class="nav-item"><a class="nav-link text-dark" href="/recipes/">Recipes</a></li>
+          <li class="nav-item"><a class="nav-link text-dark" href="#about">About</a></li>
+          <li class="nav-item"><a class="nav-link text-dark" href="#contact">Contact</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
   <!-- Hero Section -->
-  <section id="title" class="gradient-background py-5 text-center">
-    <div class="container col-xxl-8 px-4 pt-5">
-      <div class="row flex-lg-row-reverse align-items-center g-5 pt-5">
-        <div class="col-10 col-sm-8 col-lg-6 mx-auto">
-          <img src="./PBPie2.jpg" class="d-block mx-auto img-fluid" alt="Pie" loading="lazy">
-        </div>
-        <div class="col-lg-6 text-center text-lg-start">
-          <h1 class="display-4 fw-bold lh-1 mb-3">Gwynne's Goodies</h1>
-          <p class="lead mb-4">Baked with love, shared with joy.</p>
-          <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-            <a href="/recipes/" class="btn btn-light btn-lg px-4 me-md-2">🍪 Recipes</a>
-            <a href="/about/" class="btn btn-outline-light btn-lg px-4">ℹ️ About</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Features Section -->
-  <section id="features" class="py-5 text-center">
-    <div class="container mt-5">
-      <div class="row g-4 py-5 row-cols-1 row-cols-md-3">
-        <div class="col d-flex flex-column align-items-center">
-          <div class="icon-square mb-3">🥯</div>
-          <h3 class="fs-3 mb-2">Tried & true recipes</h3>
-          <p>Detailed instructions to make every bite perfect.</p>
-        </div>
-        <div class="col d-flex flex-column align-items-center">
-          <div class="icon-square mb-3">🎂</div>
-          <h3 class="fs-3 mb-2">Sweets for any occasion</h3>
-          <p>Birthdays, holidays, celebrations — there’s something for everyone.</p>
-        </div>
-        <div class="col d-flex flex-column align-items-center">
-          <div class="icon-square mb-3">🍪</div>
-          <h3 class="fs-3 mb-2">Variety of choices</h3>
-          <p>Cakes, pies, cookies — all homemade with love.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Gallery Section -->
-  <section id="gallery" class="py-5 text-center">
+  <header class="bg-light text-center py-5">
     <div class="container">
-      <div class="row g-4 justify-content-center">
-        <div class="col-lg-3 col-sm-6">
-          <img src="./BananaMuffins.jpg" alt="Banana Muffins" class="img-fluid">
-        </div>
-        <div class="col-lg-3 col-sm-6">
-          <img src="./CookieDough.JPG" alt="Cookie Dough" class="img-fluid">
-        </div>
-      </div>
+      <h1 class="display-4 fw-bold text-danger">Welcome to Gwynne's Goodies</h1>
+      <p class="lead">Delicious homemade treats baked with love ❤️</p>
+      <a href="#about" class="btn btn-danger btn-lg mt-3">Learn More</a>
+    </div>
+  </header>
+
+  <!-- About Section -->
+  <section id="about" class="py-5">
+    <div class="container text-center">
+      <h2 class="fw-bold mb-4">About Us</h2>
+      <p class="lead">At Gwynne's Goodies, every cookie, cake, and treat is baked with passion and a sprinkle of joy. Perfect for gifts, celebrations, or a little indulgence for yourself.</p>
     </div>
   </section>
 
   <!-- Contact Section -->
-  <section id="contact" class="gradient-background py-5 text-center">
-    <div class="container">
-      <h2 class="fw-bold mb-3">Contact Me</h2>
-      <p>Email me at <a href="mailto:hello@gwynnesgoodies.com">hello@gwynnesgoodies.com</a></p>
+  <section id="contact" class="py-5 bg-light">
+    <div class="container text-center">
+      <h2 class="fw-bold mb-4">Contact</h2>
+      <p class="lead">Want to place an order or ask a question? Reach out and let's make something sweet together.</p>
+      <a href="mailto:gwynne@example.com" class="btn btn-danger btn-lg">Email Me</a>
     </div>
   </section>
 
   <!-- Footer -->
-  <footer class="text-center py-3 border-top">
-    <p class="mb-0">© Gwynne's Goodies</p>
+  <footer class="bg-dark text-white text-center py-3">
+    <p class="mb-0">&copy; 2025 Gwynne's Goodies. All rights reserved.</p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
