--- a/index.html
+++ b/index.html
@@ -2,62 +2,183 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Gwynne's Goodies</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    /* Smooth scroll */
+    html {
+      scroll-behavior: smooth;
+    }
+
+    /* Hero section */
+    .hero {
+      background: url('images/hero.jpg') center/cover no-repeat;
+      color: white;
+      text-align: center;
+      padding: 8rem 1rem;
+    }
+    .hero h1 {
+      font-size: 3rem;
+      font-weight: bold;
+      text-shadow: 2px 2px 6px rgba(0,0,0,0.4);
+    }
+    .hero p {
+      font-size: 1.3rem;
+      margin-top: 1rem;
+    }
+
+    /* Playful Recipes section */
+    .clever-section {
+      background: #fff7f7;
+      border-top: 4px dashed #f28b82;
+      border-bottom: 4px dashed #f28b82;
+      padding: 4rem 1rem;
+      animation: bounceIn 1s ease;
+    }
+    .clever-section h2 {
+      color: #e63946;
+      font-size: 2.2rem;
+    }
+    .clever-section p {
+      max-width: 600px;
+      margin: 0 auto 1rem;
+      font-size: 1.15rem;
+    }
+    .recipe-emoji {
+      font-size: 2rem;
+      display: inline-block;
+      margin: 0 0.5rem;
+      animation: bounce 2s infinite;
+    }
+    .recipe-emoji:nth-child(2) {
+      animation-delay: 0.3s;
+    }
+    .recipe-emoji:nth-child(3) {
+      animation-delay: 0.6s;
+    }
+    @keyframes bounce {
+      0%, 20%, 50%, 80%, 100% { transform: translateY(0); }
+      40% { transform: translateY(-12px); }
+      60% { transform: translateY(-6px); }
+    }
+    @keyframes bounceIn {
+      from { transform: scale(0.8); opacity: 0; }
+      to { transform: scale(1); opacity: 1; }
+    }
+
+    /* Footer */
+    footer {
+      background: #f28b82;
+      color: white;
+      text-align: center;
+      padding: 1.5rem 1rem;
+    }
+  </style>
 </head>
 <body>
+
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm sticky-top">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top shadow-sm">
     <div class="container">
-      <a class="navbar-brand fw-bold text-danger" href="/">Gwynne's Goodies</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
-              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand fw-bold" href="#">Gwynne's Goodies</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link text-dark" href="/">Home</a></li>
-          <li class="nav-item"><a class="nav-link text-dark" href="/recipes/">Recipes</a></li>
-          <li class="nav-item"><a class="nav-link text-dark" href="#about">About</a></li>
-          <li class="nav-item"><a class="nav-link text-dark" href="#contact">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="#menu">Menu</a></li>
+          <li class="nav-item"><a class="nav-link" href="#recipes">Recipes</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <!-- Hero Section -->
-  <header class="bg-light text-center py-5">
+  <!-- Hero -->
+  <section class="hero">
     <div class="container">
-      <h1 class="display-4 fw-bold text-danger">Welcome to Gwynne's Goodies</h1>
-      <p class="lead">Delicious homemade treats baked with love ❤️</p>
-      <a href="#about" class="btn btn-danger btn-lg mt-3">Learn More</a>
-    </div>
-  </header>
-
-  <!-- About Section -->
-  <section id="about" class="py-5">
-    <div class="container text-center">
-      <h2 class="fw-bold mb-4">About Us</h2>
-      <p class="lead">At Gwynne's Goodies, every cookie, cake, and treat is baked with passion and a sprinkle of joy. Perfect for gifts, celebrations, or a little indulgence for yourself.</p>
+      <h1>Sweet Treats, Baked with Love</h1>
+      <p>Welcome to Gwynne’s Goodies — homemade happiness in every bite.</p>
     </div>
   </section>
 
-  <!-- Contact Section -->
-  <section id="contact" class="py-5 bg-light">
-    <div class="container text-center">
-      <h2 class="fw-bold mb-4">Contact</h2>
-      <p class="lead">Want to place an order or ask a question? Reach out and let's make something sweet together.</p>
-      <a href="mailto:gwynne@example.com" class="btn btn-danger btn-lg">Email Me</a>
+  <!-- About -->
+  <section id="about" class="py-5 text-center">
+    <div class="container">
+      <h2 class="fw-bold mb-3">About Me</h2>
+      <p class="lead">Hi, I’m Gwynne — baker, dreamer, and lover of all things sweet. I started Gwynne’s Goodies to share my favorite treats with friends, family, and now you!</p>
+    </div>
+  </section>
+
+  <!-- Menu -->
+  <section id="menu" class="py-5 bg-light text-center">
+    <div class="container">
+      <h2 class="fw-bold mb-3">Menu</h2>
+      <p class="lead">Cookies, brownies, cakes, and more — baked fresh just for you.</p>
+      <!-- Example product cards -->
+      <div class="row mt-4">
+        <div class="col-md-4 mb-4">
+          <div class="card shadow-sm h-100">
+            <img src="images/cookies.jpg" class="card-img-top" alt="Cookies">
+            <div class="card-body">
+              <h5 class="card-title">Classic Cookies</h5>
+              <p class="card-text">Chewy, gooey, and impossible to eat just one.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4">
+          <div class="card shadow-sm h-100">
+            <img src="images/brownies.jpg" class="card-img-top" alt="Brownies">
+            <div class="card-body">
+              <h5 class="card-title">Fudgy Brownies</h5>
+              <p class="card-text">Rich chocolate squares that melt in your mouth.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4">
+          <div class="card shadow-sm h-100">
+            <img src="images/cake.jpg" class="card-img-top" alt="Cake">
+            <div class="card-body">
+              <h5 class="card-title">Custom Cakes</h5>
+              <p class="card-text">Celebrations are sweeter with a personal touch.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Recipes (playful) -->
+  <section id="recipes" class="clever-section text-center">
+    <div class="container">
+      <h2 class="fw-bold mb-3">Recipes? 🍪</h2>
+      <p class="lead">Nice try… the family secrets stay in the vault. 🔒😉</p>
+      <p>But here’s a freebie: Step 1 — preheat oven. Step 2 — call Gwynne. Step 3 — enjoy delicious goodies. 🎂</p>
+      <div class="mt-4">
+        <span class="recipe-emoji">🥧</span>
+        <span class="recipe-emoji">🍰</span>
+        <span class="recipe-emoji">🍪</span>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact -->
+  <section id="contact" class="py-5 text-center">
+    <div class="container">
+      <h2 class="fw-bold mb-3">Contact</h2>
+      <p class="lead">Got a craving or a celebration coming up? Let’s talk goodies!</p>
+      <p>Email: <a href="mailto:hello@gwynnesgoodies.com">hello@gwynnesgoodies.com</a></p>
     </div>
   </section>
 
   <!-- Footer -->
-  <footer class="bg-dark text-white text-center py-3">
-    <p class="mb-0">&copy; 2025 Gwynne's Goodies. All rights reserved.</p>
+  <footer>
+    <p>&copy; 2025 Gwynne's Goodies. Baked with ❤️ in Sydney.</p>
   </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
