--- a/index.html
+++ b/index.html
@@ -4,47 +4,87 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Gwynne's Goodies</title>
-  <link rel="stylesheet" href="style.css">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
   <style>
-    /* Smooth scroll */
     html {
       scroll-behavior: smooth;
     }
 
-    /* Hero section */
+    body {
+      font-family: 'Roboto', sans-serif;
+      line-height: 1.6;
+      background-color: #fffaf0;
+    }
+
+    /* Navbar */
+    .navbar {
+      background: #fff7f7;
+    }
+    .navbar-brand {
+      font-family: 'Pacifico', cursive;
+      font-size: 1.8rem;
+      color: #e63946 !important;
+    }
+    .nav-link {
+      color: #e63946 !important;
+      font-weight: 500;
+    }
+    .nav-link:hover {
+      text-decoration: underline;
+    }
+
+    /* Hero */
     .hero {
-      background: url('images/hero.jpg') center/cover no-repeat;
+      background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('BananaMuffins.jpg') center/cover no-repeat;
       color: white;
       text-align: center;
       padding: 8rem 1rem;
     }
     .hero h1 {
       font-size: 3rem;
-      font-weight: bold;
-      text-shadow: 2px 2px 6px rgba(0,0,0,0.4);
+      font-family: 'Pacifico', cursive;
+      text-shadow: 2px 2px 6px rgba(0,0,0,0.5);
     }
     .hero p {
       font-size: 1.3rem;
       margin-top: 1rem;
     }
 
-    /* Playful Recipes section */
+    /* Sections */
+    section {
+      padding: 4rem 1rem;
+    }
+
+    .section-title {
+      font-size: 2.2rem;
+      color: #e63946;
+      margin-bottom: 1rem;
+      text-transform: uppercase;
+    }
+
+    /* Cards */
+    .card {
+      border-radius: 15px;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+    }
+
+    /* Recipes playful section */
     .clever-section {
       background: #fff7f7;
       border-top: 4px dashed #f28b82;
       border-bottom: 4px dashed #f28b82;
-      padding: 4rem 1rem;
+      text-align: center;
       animation: bounceIn 1s ease;
-    }
-    .clever-section h2 {
-      color: #e63946;
-      font-size: 2.2rem;
-    }
-    .clever-section p {
-      max-width: 600px;
-      margin: 0 auto 1rem;
-      font-size: 1.15rem;
     }
     .recipe-emoji {
       font-size: 2rem;
@@ -52,12 +92,9 @@
       margin: 0 0.5rem;
       animation: bounce 2s infinite;
     }
-    .recipe-emoji:nth-child(2) {
-      animation-delay: 0.3s;
-    }
-    .recipe-emoji:nth-child(3) {
-      animation-delay: 0.6s;
-    }
+    .recipe-emoji:nth-child(2) { animation-delay: 0.3s; }
+    .recipe-emoji:nth-child(3) { animation-delay: 0.6s; }
+
     @keyframes bounce {
       0%, 20%, 50%, 80%, 100% { transform: translateY(0); }
       40% { transform: translateY(-12px); }
@@ -70,27 +107,33 @@
 
     /* Footer */
     footer {
-      background: #f28b82;
+      background: #e63946;
       color: white;
       text-align: center;
       padding: 1.5rem 1rem;
+      font-size: 0.95rem;
     }
+    footer a {
+      color: white;
+      text-decoration: underline;
+    }
+
   </style>
 </head>
 <body>
 
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top shadow-sm">
+  <nav class="navbar navbar-expand-lg sticky-top shadow-sm">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="#">Gwynne's Goodies</a>
+      <a class="navbar-brand" href="#">Gwynne's Goodies</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="about/index.html">About</a></li>
           <li class="nav-item"><a class="nav-link" href="#menu">Menu</a></li>
-          <li class="nav-item"><a class="nav-link" href="#recipes">Recipes</a></li>
+          <li class="nav-item"><a class="nav-link" href="recipes/index.html">Recipes</a></li>
           <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
       </div>
@@ -105,33 +148,24 @@
     </div>
   </section>
 
-  <!-- About -->
-  <section id="about" class="py-5 text-center">
-    <div class="container">
-      <h2 class="fw-bold mb-3">About Me</h2>
-      <p class="lead">Hi, I’m Gwynne — baker, dreamer, and lover of all things sweet. I started Gwynne’s Goodies to share my favorite treats with friends, family, and now you!</p>
-    </div>
-  </section>
-
   <!-- Menu -->
-  <section id="menu" class="py-5 bg-light text-center">
+  <section id="menu" class="text-center bg-light">
     <div class="container">
-      <h2 class="fw-bold mb-3">Menu</h2>
-      <p class="lead">Cookies, brownies, cakes, and more — baked fresh just for you.</p>
-      <!-- Example product cards -->
+      <h2 class="section-title">Menu</h2>
+      <p>Cookies, brownies, cakes, and more — baked fresh just for you.</p>
       <div class="row mt-4">
         <div class="col-md-4 mb-4">
           <div class="card shadow-sm h-100">
-            <img src="images/cookies.jpg" class="card-img-top" alt="Cookies">
+            <img src="CookieDough.JPG" class="card-img-top" alt="Cookies">
             <div class="card-body">
               <h5 class="card-title">Classic Cookies</h5>
-              <p class="card-text">Chewy, gooey, and impossible to eat just one.</p>
+              <p class="card-text">Chewy, gooey, impossible to eat just one.</p>
             </div>
           </div>
         </div>
         <div class="col-md-4 mb-4">
           <div class="card shadow-sm h-100">
-            <img src="images/brownies.jpg" class="card-img-top" alt="Brownies">
+            <img src="Brownies.jpg" class="card-img-top" alt="Brownies">
             <div class="card-body">
               <h5 class="card-title">Fudgy Brownies</h5>
               <p class="card-text">Rich chocolate squares that melt in your mouth.</p>
@@ -140,7 +174,7 @@
         </div>
         <div class="col-md-4 mb-4">
           <div class="card shadow-sm h-100">
-            <img src="images/cake.jpg" class="card-img-top" alt="Cake">
+            <img src="BananaMuffins.jpg" class="card-img-top" alt="Cake">
             <div class="card-body">
               <h5 class="card-title">Custom Cakes</h5>
               <p class="card-text">Celebrations are sweeter with a personal touch.</p>
@@ -151,11 +185,11 @@
     </div>
   </section>
 
-  <!-- Recipes (playful) -->
-  <section id="recipes" class="clever-section text-center">
+  <!-- Recipes playful section -->
+  <section class="clever-section">
     <div class="container">
-      <h2 class="fw-bold mb-3">Recipes? 🍪</h2>
-      <p class="lead">Nice try… the family secrets stay in the vault. 🔒😉</p>
+      <h2 class="section-title">Recipes? 🍪</h2>
+      <p>Nice try… the family secrets stay in the vault. 🔒😉</p>
       <p>But here’s a freebie: Step 1 — preheat oven. Step 2 — call Gwynne. Step 3 — enjoy delicious goodies. 🎂</p>
       <div class="mt-4">
         <span class="recipe-emoji">🥧</span>
@@ -166,10 +200,10 @@
   </section>
 
   <!-- Contact -->
-  <section id="contact" class="py-5 text-center">
+  <section id="contact" class="text-center">
     <div class="container">
-      <h2 class="fw-bold mb-3">Contact</h2>
-      <p class="lead">Got a craving or a celebration coming up? Let’s talk goodies!</p>
+      <h2 class="section-title">Contact</h2>
+      <p>Got a craving or a celebration coming up? Let’s talk goodies!</p>
       <p>Email: <a href="mailto:hello@gwynnesgoodies.com">hello@gwynnesgoodies.com</a></p>
     </div>
   </section>
