--- a/recipes/index.html
+++ b/recipes/index.html
@@ -1,94 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Recipes | Gwynne's Goodies</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body {
-      background: #fff7f7;
-      font-family: 'Helvetica Neue', sans-serif;
-      text-align: center;
-      padding: 5rem 1rem;
-    }
-    h1 {
-      color: #e63946;
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
-      animation: bounceIn 1s ease;
-    }
-    p {
-      max-width: 600px;
-      margin: 0 auto 1rem;
-      font-size: 1.2rem;
-      color: #333;
-    }
-    .recipe-emoji {
-      font-size: 2.2rem;
-      display: inline-block;
-      margin: 0 0.5rem;
-      animation: bounce 2s infinite;
-    }
-    .recipe-emoji:nth-child(2) {
-      animation-delay: 0.3s;
-    }
-    .recipe-emoji:nth-child(3) {
-      animation-delay: 0.6s;
-    }
-    @keyframes bounce {
-      0%, 20%, 50%, 80%, 100% {
-        transform: translateY(0);
-      }
-      40% {
-        transform: translateY(-12px);
-      }
-      60% {
-        transform: translateY(-6px);
-      }
-    }
-    @keyframes bounceIn {
-      from {
-        transform: scale(0.8);
-        opacity: 0;
-      }
-      to {
-        transform: scale(1);
-        opacity: 1;
-      }
-    }
-    a.back-home {
-      display: inline-block;
-      margin-top: 2rem;
-      text-decoration: none;
-      background: #e63946;
-      color: #fff;
-      padding: 0.75rem 1.5rem;
-      border-radius: 50px;
-      font-weight: bold;
-      transition: background 0.3s;
-    }
-    a.back-home:hover {
-      background: #d62828;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Recipes - Gwynne's Goodies</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+<style>
+body { font-family: 'Roboto', sans-serif; background-color: #fffaf0; text-align:center; }
+h1 { font-family: 'Pacifico', cursive; color: #e63946; margin: 2rem 0; }
+p { max-width: 700px; margin: 1rem auto; font-size: 1.15rem; }
+span { font-size: 2rem; margin: 0 0.5rem; animation: bounce 2s infinite; display:inline-block; }
+@keyframes bounce { 0%,20%,50%,80%,100% { transform: translateY(0); } 40% { transform: translateY(-12px); } 60% { transform: translateY(-6px); } }
+a { color: #e63946; text-decoration: underline; }
+</style>
 </head>
 <body>
-
-  <h1>Recipes? 🍪</h1>
-  <p>Nice try… but the family secrets stay locked in the cookie vault. 🔒😉</p>
-  <p>Here’s a freebie though:  
-     <br>Step 1 — Preheat oven  
-     <br>Step 2 — Call Gwynne  
-     <br>Step 3 — Enjoy delicious goodies 🎂</p>
-
-  <div class="mt-4">
-    <span class="recipe-emoji">🥧</span>
-    <span class="recipe-emoji">🍰</span>
-    <span class="recipe-emoji">🍪</span>
-  </div>
-
-  <a class="back-home" href="/">← Back to Home</a>
-
+<h1>Recipes? 🍪</h1>
+<p>Nice try… the family secrets stay in the vault. 🔒😉</p>
+<p>Step 1 — preheat oven. Step 2 — call Gwynne. Step 3 — enjoy delicious goodies. 🎂</p>
+<div>
+<span>🥧</span><span>🍰</span><span>🍪</span>
+</div>
+<p><a href="../index.html">Back to Home</a></p>
 </body>
 </html>
