--- a/index.html
+++ b/index.html
@@ -12,71 +12,31 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <style>
-    html {
-      scroll-behavior: smooth;
-    }
-
-    body {
-      font-family: 'Roboto', sans-serif;
-      line-height: 1.6;
-      background-color: #fffaf0;
-    }
+    html { scroll-behavior: smooth; }
+    body { font-family: 'Roboto', sans-serif; line-height: 1.6; background-color: #fffaf0; }
 
     /* Navbar */
-    .navbar {
-      background: #fff7f7;
-    }
-    .navbar-brand {
-      font-family: 'Pacifico', cursive;
-      font-size: 1.8rem;
-      color: #e63946 !important;
-    }
-    .nav-link {
-      color: #e63946 !important;
-      font-weight: 500;
-    }
-    .nav-link:hover {
-      text-decoration: underline;
-    }
+    .navbar { background: #fff7f7; }
+    .navbar-brand { font-family: 'Pacifico', cursive; font-size: 1.8rem; color: #e63946 !important; }
+    .nav-link { color: #e63946 !important; font-weight: 500; }
+    .nav-link:hover { text-decoration: underline; }
 
     /* Hero */
     .hero {
-      background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('BananaMuffins.jpg') center/cover no-repeat;
+      background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('images/BananaMuffins.jpg') center/cover no-repeat;
       color: white;
       text-align: center;
       padding: 8rem 1rem;
     }
-    .hero h1 {
-      font-size: 3rem;
-      font-family: 'Pacifico', cursive;
-      text-shadow: 2px 2px 6px rgba(0,0,0,0.5);
-    }
-    .hero p {
-      font-size: 1.3rem;
-      margin-top: 1rem;
-    }
+    .hero h1 { font-size: 3rem; font-family: 'Pacifico', cursive; text-shadow: 2px 2px 6px rgba(0,0,0,0.5); }
+    .hero p { font-size: 1.3rem; margin-top: 1rem; }
 
-    /* Sections */
-    section {
-      padding: 4rem 1rem;
-    }
-
-    .section-title {
-      font-size: 2.2rem;
-      color: #e63946;
-      margin-bottom: 1rem;
-      text-transform: uppercase;
-    }
+    /* Section Titles */
+    .section-title { font-size: 2.2rem; color: #e63946; margin-bottom: 1rem; text-transform: uppercase; }
 
     /* Cards */
-    .card {
-      border-radius: 15px;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-    .card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 10px 25px rgba(0,0,0,0.2);
-    }
+    .card { border-radius: 15px; transition: transform 0.3s ease, box-shadow 0.3s ease; }
+    .card:hover { transform: translateY(-5px); box-shadow: 0 10px 25px rgba(0,0,0,0.2); }
 
     /* Recipes playful section */
     .clever-section {
@@ -85,38 +45,22 @@
       border-bottom: 4px dashed #f28b82;
       text-align: center;
       animation: bounceIn 1s ease;
+      padding: 4rem 1rem;
     }
-    .recipe-emoji {
-      font-size: 2rem;
-      display: inline-block;
-      margin: 0 0.5rem;
-      animation: bounce 2s infinite;
-    }
+    .recipe-emoji { font-size: 2rem; display: inline-block; margin: 0 0.5rem; animation: bounce 2s infinite; }
     .recipe-emoji:nth-child(2) { animation-delay: 0.3s; }
     .recipe-emoji:nth-child(3) { animation-delay: 0.6s; }
 
     @keyframes bounce {
-      0%, 20%, 50%, 80%, 100% { transform: translateY(0); }
+      0%,20%,50%,80%,100% { transform: translateY(0); }
       40% { transform: translateY(-12px); }
       60% { transform: translateY(-6px); }
     }
-    @keyframes bounceIn {
-      from { transform: scale(0.8); opacity: 0; }
-      to { transform: scale(1); opacity: 1; }
-    }
+    @keyframes bounceIn { from { transform: scale(0.8); opacity: 0; } to { transform: scale(1); opacity: 1; } }
 
     /* Footer */
-    footer {
-      background: #e63946;
-      color: white;
-      text-align: center;
-      padding: 1.5rem 1rem;
-      font-size: 0.95rem;
-    }
-    footer a {
-      color: white;
-      text-decoration: underline;
-    }
+    footer { background: #e63946; color: white; text-align: center; padding: 1.5rem 1rem; font-size: 0.95rem; }
+    footer a { color: white; text-decoration: underline; }
 
   </style>
 </head>
@@ -149,14 +93,14 @@
   </section>
 
   <!-- Menu -->
-  <section id="menu" class="text-center bg-light">
+  <section id="menu" class="text-center bg-light py-5">
     <div class="container">
       <h2 class="section-title">Menu</h2>
       <p>Cookies, brownies, cakes, and more — baked fresh just for you.</p>
       <div class="row mt-4">
         <div class="col-md-4 mb-4">
           <div class="card shadow-sm h-100">
-            <img src="CookieDough.JPG" class="card-img-top" alt="Cookies">
+            <img src="images/CookieDough.JPG" class="card-img-top" alt="Classic Cookies">
             <div class="card-body">
               <h5 class="card-title">Classic Cookies</h5>
               <p class="card-text">Chewy, gooey, impossible to eat just one.</p>
@@ -165,7 +109,7 @@
         </div>
         <div class="col-md-4 mb-4">
           <div class="card shadow-sm h-100">
-            <img src="Brownies.jpg" class="card-img-top" alt="Brownies">
+            <img src="images/Brownies.jpg" class="card-img-top" alt="Fudgy Brownies">
             <div class="card-body">
               <h5 class="card-title">Fudgy Brownies</h5>
               <p class="card-text">Rich chocolate squares that melt in your mouth.</p>
@@ -174,7 +118,7 @@
         </div>
         <div class="col-md-4 mb-4">
           <div class="card shadow-sm h-100">
-            <img src="BananaMuffins.jpg" class="card-img-top" alt="Cake">
+            <img src="images/BananaMuffins.jpg" class="card-img-top" alt="Custom Cakes">
             <div class="card-body">
               <h5 class="card-title">Custom Cakes</h5>
               <p class="card-text">Celebrations are sweeter with a personal touch.</p>
@@ -200,7 +144,7 @@
   </section>
 
   <!-- Contact -->
-  <section id="contact" class="text-center">
+  <section id="contact" class="text-center py-5">
     <div class="container">
       <h2 class="section-title">Contact</h2>
       <p>Got a craving or a celebration coming up? Let’s talk goodies!</p>
